# attendance-record-fastapi

./: README.md  db.py  main.py  migrate_db.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
client/: app.py
cruds/: done.py  task.py
models/: task.py
routers/: done.py  task.py
schemas/: task.py
tests/: test_main.py
