[tool.poetry]
name = "attendance-record-fastapi"
version = "0.1.0"
description = ""
authors = ["Yusuke Nakashima <yuusukerego@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
